--- a/go/requirements.txt
+++ b/go/requirements.txt
@@ -1,6 +1,6 @@
 aioredis==1.3.1
-asgi-redis==1.4.3
-asgiref==3.3.1
+asgi-redis
+asgiref
 async-timeout==3.0.1
 attrs==20.3.0
 autobahn==20.7.1
@@ -25,7 +25,6 @@ incremental==17.5.0
 msgpack==1.0.2
 msgpack-python==0.5.6
 oauthlib==3.1.0
-pkg-resources==0.0.0
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
